syntax = "proto3";

package run.v1;

option go_package = "github.com/easyCZ/qfy/gen/v1;apiv1";

message Run {
    string id = 1;
    string synthetic_id = 2;

    repeated Result results = 3;
}

message Result {
    string step_name = 1;

    Response response = 2;
    repeated synthetics.v1.Variable variables = 3;
}

message Response {
    int status = 1;
    repeated Header headers = 2;
    string body = 3;
}

message Header {
    string key = 1;
    string value = 2;
}

message CreateRequest {
    Run run = 1;
}

message CreateResponse {
    Run run = 1;
}

message ListRequest {}
message ListResponse {
    repeated Run runs = 1;
}

service RunService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
}
