syntax = "proto3";

package agent.v1;

option go_package = "github.com/easyCZ/seer/gen/v1;apiv1";

message SubscribeRequest {
  string agentID = 1;
  string location = 2;
}

message SubscribeResponse {}

service AgentService {
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {}
}
